# hypr-wr-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
hypr_wr_manager/: __init__.py  __main__.py  config.py  hyprctl.py  persistence.py  rules.py
hypr_wr_manager/ui/: client_model.py  main_window.py  preferences.py  rule_dialog.py
