[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hypr-wr-manager"
version = "0.2.0"
description = "A PyQt6 GUI to manage Hyprland window rules from live clients."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [
    { name = "Lucas Murtfeld" },
]
keywords = ["hyprland", "wayland", "window-rules", "linux", "gui"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment :: Window Managers",
]
dependencies = [
    "PyQt6>=6.5",
]

[project.scripts]
hypr-wr-manager = "hypr_wr_manager.__main__:main"

[project.urls]
Homepage = "https://github.com/niva/hypr-wr-manager"

[tool.setuptools.packages.find]
include = ["hypr_wr_manager*"]
